--- a/src/style/frontsec.css
+++ b/src/style/frontsec.css
@@ -13,15 +13,34 @@
 .frontsec .fs-right {
     border-left: 3px solid var(--border-color);
     width: 35%;
-    background-color: var(--bg-secondary);
+    background: radial-gradient(circle at bottom right, #16181d 20%, transparent 80%), radial-gradient(circle at top right, #16181d 20%, transparent 80%);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+.frontsec .fs-right input[type="text"] {
+    margin: 20px;
+    padding: 10px;
+    width: 80%;
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    background-color: var(--bg-elevated);
+    color: var(--text-primary);
+}
 .frontsec .fs-right h2 {
+    font-size: 30px;
     padding: 20px;
 }
 .frontsec .fs-right ul {
     list-style: none;
     padding: 20px;
+}
+.frontsec .fs-right ul li a {
+    text-decoration: none;
+    color: var(--text-primary);
+
+}
+.frontsec .fs-right ul li a:hover {
+    color: var(--accent);
+    text-decoration: underline;
 }
