--- a/src/style/fsleft.css
+++ b/src/style/fsleft.css
@@ -1,4 +1,5 @@
 .fs-left-content {
+    margin-top: 20vh;;
     height: 60vh;
     display: flex;
     flex-direction: column; /* <-- stack vertically */
@@ -17,4 +18,53 @@
 }
 .logo:hover {
     opacity: 0.3;
+}
+
+.btn-group {
+    margin-top: 30px;
+    display: flex;
+    text-decoration: none;
+    gap: 15px;
+}
+
+.fs-btn {
+    text-decoration: none;
+}
+.fs-btn button {
+    background-color: var(--bg-elevated);
+    color: var(--text-primary);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.fs-btn button:hover {
+    background-color: var(--accent);
+    color: var(--bg-elevated);
+    border-color: var(--accent);
+}
+
+.fs-text-box {
+    margin-top: 20px;
+    min-height: 30vh;
+    min-width: 90vh;
+    background-color: var(--bg-elevated);
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid var(--border-color);
+    font-size: 14px;
+    max-width: 80%;
+    text-align: left;
+}
+.dim {
+    color: var(--text-secondary);
+    font-size: 14px;
+}
+.bright {
+    color: var(--text-primary);
+    font-size: 14px;
 }
